--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="script.js"></script>
-        <title>Document</title>
+        <script src="functionality/script.js"></script>
+        <title>Encrytption Test</title>
         
     </head>
     <body>
-        <svg width="600" height="600" id="main">
+        <div>
+            <label>
+                Insert String: 
+                <input id="word">
+            </label>
+    
+            <button onclick="drawWord()">Click Me</button>
+        </div>
 
-        </svg>
+        <div>
+            <svg width="600" height="900" id="main">
+
+            </svg>
+        </div>
+
     </body>
 </html>
